--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-scripts": "5.0.0",
 		"react-select": "^5.2.2",
 		"react-tabs": "^4.0.1",
+		"react-toastify": "^8.2.0",
 		"redux": "^4.1.2",
 		"web-vitals": "^2.1.4"
 	},
