--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react-content-loader": "^6.1.0",
 		"react-dom": "^17.0.2",
 		"react-flip-move": "^3.0.4",
+		"react-focus-lock": "^2.8.1",
 		"react-hook-form": "^7.27.1",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^6.2.2",
